Added healthinfo page || created styles for textboxes and text blocks

--- a/2Y_2324_FinalsProject/MainWindow.xaml
+++ b/2Y_2324_FinalsProject/MainWindow.xaml
@@ -8,11 +8,18 @@
         Title="MainWindow" Height="450" Width="800">
 
     <Window.Resources>
+        <Style x:Key="TxtBlockStyle" TargetType="TextBlock">
+            <Setter Property="Width" Value="200"/>
+            <Setter Property="Height" Value="20"/>
+            <Setter Property="FontSize" Value="13"/>
+            <Setter Property="TextAlignment" Value="Center"/>
+            <Setter Property="Background" Value="Transparent"/>
+        </Style>
+
         <Style x:Key="TxtBoxStyle" TargetType="TextBox">
             <Setter Property="Width" Value="200"/>
             <Setter Property="Height" Value="30"/>
             <Setter Property="FontSize" Value="20"/>
-            <Setter Property="FontFamily" Value="Verdana"/>
             <Setter Property="BorderThickness" Value="2"/>
             <Setter Property="TextAlignment" Value="Center"/>
             <Setter Property="Template">
@@ -28,7 +35,16 @@
                 </Setter.Value>
             </Setter>
         </Style>
-        
+
+        <Style x:Key="TxtBoxStyle2" TargetType="TextBox">
+            <Setter Property="Width" Value="200"/>
+            <Setter Property="Height" Value="20"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="FontSize" Value="13"/>
+            <Setter Property="TextAlignment" Value="Center"/>
+        </Style>
+
         <Style x:Key="BtnStyle" TargetType="Button">
             <Setter Property="Width" Value="100"/>
             <Setter Property="Height" Value="25"/>
@@ -78,7 +94,7 @@
                         <GridViewColumn Header="ID" Width="100" DisplayMemberBinding="{Binding Column1}" />
                         <GridViewColumn Header="Name" Width="200" DisplayMemberBinding="{Binding Column2}" />
                         <GridViewColumn Header="Status" Width="100" DisplayMemberBinding="{Binding Column3}" />
-                        <GridViewColumn Header="Doctor" Width="100" DisplayMemberBinding="{Binding Column5}" />
+                        <GridViewColumn Header="Doctor" Width="100" DisplayMemberBinding="{Binding Column4}" />
                     </GridView>
                 </ListView.View>
             </ListView>
@@ -88,23 +104,25 @@
             <TextBlock Text="Header Text" Margin="0 10 0 0" HorizontalAlignment="Center" FontSize="20" Background="Transparent"/>
         </StackPanel>
         
-        <StackPanel x:Name="pnlEditInfo" Margin="0 40 0 0" Orientation="Horizontal" Visibility="Visible" >
-            <StackPanel Orientation="Vertical" >
+        <StackPanel x:Name="pnlPatientInfo" Margin="0 40 0 0" Orientation="Horizontal" Visibility="Collapsed" >
+
+            <StackPanel Margin= "50 20 0 0" Orientation="Vertical" >
                 <Image x:Name="imgPatient" Source="/Images/BlankImage.png" Margin="100 0 0 0" Width="200" Height="200"/>
                 <Button Visibility="Visible" x:Name="btnTakeImg" Margin="100 0 0 0" Content="Take Image" FontFamily="verdana" Background="#FFFFAE80" FontSize="13" BorderBrush="Transparent" Width="100" Height="20" Style="{StaticResource BtnStyle}" />
                 <Button Visibility="Visible" x:Name="btnUploadPic" Margin="100 10 0 0" Content="Upload Image" FontFamily="verdana" Background="#FFFFAE80" FontSize="13" BorderBrush="Transparent" Width="100" Height="20" Style="{StaticResource BtnStyle}" />
             </StackPanel>
-            <StackPanel Margin= "50 27 0 0"  Orientation="Vertical" >
-                <TextBlock Text="Name" Margin="0 0 0 0" HorizontalAlignment="Center" Background="Transparent"/>
-                <TextBox x:Name="txtName" Margin="0 0 0 0" Background="White" Width="200" Height="20"/>
-                <TextBlock Text="Sex" Margin="0 0 0 0" HorizontalAlignment="Center" Background="Transparent"/>
-                <TextBox x:Name="txtSex" Margin="0 0 0 0" Background="White" Width="200" Height="20"/>
-                <TextBlock Text="Age" Margin="0 0 0 0" HorizontalAlignment="Center" Background="Transparent"/>
-                <TextBox x:Name="txtAge" Margin="0 0 0 0" Background="White" Width="200" Height="20"/>
-                <TextBlock Text="Date of Birth" Margin="0 0 0 0" HorizontalAlignment="Center" Background="Transparent"/>
-                <TextBox x:Name="txtDob" Margin="0 0 0 0" Background="White" Width="200" Height="20"/>
-                <TextBlock Text="BloodType" Margin="0 0 0 0" HorizontalAlignment="Center" Background="Transparent"/>
-                <ComboBox x:Name="cbBloodType" Margin="0 0 0 0" Background="White" Width="95" Height="20"  >
+            
+            <StackPanel Margin= "50 20 0 0"  Orientation="Vertical" >
+                <TextBlock Text="Name" Margin="0 0 0 0" Style="{StaticResource TxtBlockStyle}"/>
+                <TextBox x:Name="txtName" Text="test" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}"/>
+                <TextBlock Text="Sex" Margin="0 0 0 0" Style="{StaticResource TxtBlockStyle}"/>
+                <TextBox x:Name="txtSex" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}"/>
+                <TextBlock Text="Age" Margin="0 0 0 0" Style="{StaticResource TxtBlockStyle}"/>
+                <TextBox x:Name="txtAge" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}"/>
+                <TextBlock Text="Date of Birth" Margin="0 0 0 0" Style="{StaticResource TxtBlockStyle}"/>
+                <TextBox x:Name="txtDob" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}"/>
+                <TextBlock Text="BloodType" Margin="0 0 0 0" Style="{StaticResource TxtBlockStyle}"/>
+                <ComboBox x:Name="cbBloodType" Margin="0 0 0 0" Background="White" Width="95" Height="20" >
                     <ComboBoxItem Content="A-"/>
                     <ComboBoxItem Content="A+"/>
                     <ComboBoxItem Content="B-"/>
@@ -114,11 +132,11 @@
                     <ComboBoxItem Content="O-"/>
                     <ComboBoxItem Content="O+"/>
                 </ComboBox>
-                <TextBlock Text="Emergency Contact Name" Margin="0 0 0 0" HorizontalAlignment="Center" Background="Transparent"/>
-                <TextBox x:Name="txtECName" Margin="0 0 0 0" Background="White" Width="200" Height="20"/>
-                <TextBlock Text="Emergency Contact Number" Margin="0 0 0 0" HorizontalAlignment="Center" Background="Transparent"/>
-                <TextBox x:Name="txtECNum" Margin="0 0 0 0" Background="White" Width="200" Height="20"/>
-                <TextBlock Text="Patient Status" Margin="0 0 0 0" HorizontalAlignment="Center" Background="Transparent"/>
+                <TextBlock Text="Emergency Contact Name" Margin="0 0 0 0" Style="{StaticResource TxtBlockStyle}"/>
+                <TextBox x:Name="txtECName" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}"/>
+                <TextBlock Text="Emergency Contact Number" Margin="0 0 0 0" Style="{StaticResource TxtBlockStyle}"/>
+                <TextBox x:Name="txtECNum" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}"/>
+                <TextBlock Text="Patient Status" Margin="0 0 0 0" Style="{StaticResource TxtBlockStyle}"/>
                 <ComboBox x:Name="cbPStatus" Margin="0 0 0 0" Background="White" Width="95" Height="20"  >
                     <ComboBoxItem Content="Admitted"/>
                     <ComboBoxItem Content="Discharged"/>
@@ -126,12 +144,41 @@
                     <ComboBoxItem Content="In treatment"/>
                     <ComboBoxItem Content="Recovered"/>
                 </ComboBox>
-                <Button Visibility="Visible" x:Name="btnSaveChanges" Margin="0 10 0 0" Content="Save Changes" FontFamily="verdana" Background="#FFFFAE80" FontSize="13" BorderBrush="Transparent" Width="100" Height="20" Style="{StaticResource BtnStyle}" />
-                <Button Visibility="Visible" x:Name="btnAddNew" Margin="0 10 0 0" Content="Add Patient" FontFamily="verdana" Background="#FFFFAE80" FontSize="13" BorderBrush="Transparent" Width="100" Height="20" Style="{StaticResource BtnStyle}" />
+                <Button Visibility="Visible" x:Name="btnSaveChanges" Margin="0 10 0 0" Content="Save Changes" Style="{StaticResource BtnStyle}" Click="btnSaveChanges_Click"/>
+                <Button Visibility="Visible" x:Name="btnAddNew" Margin="0 10 0 0" Content="Add Patient" Style="{StaticResource BtnStyle}"/>
             </StackPanel>
         </StackPanel>
 
-        <StackPanel x:Name="pnlPatientInfo" Margin="0 40 0 0" Orientation="Horizontal" Visibility="Collapsed" >
+        <StackPanel x:Name="pnlHealthInfo" Margin="0 40 0 0" Orientation="Horizontal" Visibility="Visible" >
+            <StackPanel Margin= "50 20 0 0"  Orientation="Vertical" >
+                <TextBlock Text="Name" Margin="0 0 0 0" Style="{StaticResource TxtBlockStyle}"/>
+                <TextBox x:Name="txtName2" Text="test" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}"/>
+                <TextBlock Text="Medications" Margin="0 0 0 0" Style="{StaticResource TxtBlockStyle}"/>
+                <TextBox x:Name="txtMed" Text="test" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}"/>
+                <TextBlock Text="Allergies" Margin="0 0 0 0" Style="{StaticResource TxtBlockStyle}"/>
+                <TextBox x:Name="txtAlrgy" Text="test" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}"/>
+                <TextBlock Text="Surgeries" Margin="0 0 0 0" Style="{StaticResource TxtBlockStyle}"/>
+                <TextBox x:Name="txtSurg" Text="test" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}"/>
+                <TextBlock Text="FamilyHistory" Margin="0 0 0 0" Style="{StaticResource TxtBlockStyle}"/>
+                <TextBox x:Name="txtFamHist" Text="test" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}"/>
+
+            </StackPanel>
+            <StackPanel Margin= "100 20 0 0"  Orientation="Vertical" >
+                <TextBlock Text="Checkups" Margin="0 0 0 0" HorizontalAlignment="Center" Background="Transparent"/>
+                <ListView x:Name="lvCheckups" Margin="0,10,0,0" Width="401" Height="310" BorderThickness="0" >
+                    <ListView.View>
+                        <GridView>
+                            <GridViewColumn Header="ID" Width="100" DisplayMemberBinding="{Binding Column1}" />
+                            <GridViewColumn Header="Date" Width="100" DisplayMemberBinding="{Binding Column2}" />
+                            <GridViewColumn Header="Doctor/Nurse" Width="200" DisplayMemberBinding="{Binding Column3}" />
+                        </GridView>
+                    </ListView.View>
+                </ListView>
+            </StackPanel>
+        </StackPanel>
+
+
+            <!--<StackPanel x:Name="pnlPatientInfo" Margin="0 40 0 0" Orientation="Horizontal" Visibility="Collapsed" >
             <StackPanel Orientation="Vertical" >
                 <Image x:Name="imgPatient2" Source="/Images/BlankImage.png" Margin="100 0 0 0" Width="200" Height="200"/>
             </StackPanel>
@@ -153,7 +200,7 @@
                 <TextBlock Text="Patient Status" Margin="0 0 0 0" HorizontalAlignment="Center" Background="Transparent"/>
                 <TextBlock x:Name="pStatus" Text="insert text" Margin="0 0 0 0" HorizontalAlignment="Center" Background="Transparent"/>
             </StackPanel>
-        </StackPanel>
+        </StackPanel>-->
 
     </Grid>
 </Window>
