--- a/2Y_2324_FinalsProject/CameraWin.xaml
+++ b/2Y_2324_FinalsProject/CameraWin.xaml
@@ -6,13 +6,39 @@
         xmlns:local="clr-namespace:_2Y_2324_FinalsProject"
         mc:Ignorable="d"
         Title="CameraWin" Height="450" Width="800" Closing="Window_Closing">
-    <Grid Loaded="Grid_Loaded">
+
+    <Window.Resources>
+        <Style x:Key="BtnStyle" TargetType="Button">
+            <Setter Property="Width" Value="100"/>
+            <Setter Property="Height" Value="25"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="BorderThickness" Value="2"/>
+            <Setter Property="Background" Value="Transparent"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Border Background="{TemplateBinding Background}"
+                    BorderBrush="{TemplateBinding BorderBrush}"
+                    BorderThickness="{TemplateBinding BorderThickness}"
+                    CornerRadius="10">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Border>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+    </Window.Resources>
+
+    <Grid Background="AliceBlue" Loaded="Grid_Loaded">
         <StackPanel Orientation="Vertical" HorizontalAlignment="Center">
-            <Label Content="Camera" HorizontalAlignment="Left" Margin="0,10,0,0" VerticalAlignment="Top"/>
-            <ComboBox x:Name="cmbCamera" Text="Start" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="420"/>
+            <ComboBox x:Name="cmbCamera" Text="Start" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="450"/>
             <Image x:Name="pic" HorizontalAlignment="Left" Height="330" Margin="0,0,0,0" VerticalAlignment="Top" Width="450"/>
-            <Button x:Name="btnStart" Content="Start" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Click="btnStart_Click"/>
-            <Button x:Name="btnCaptureImage" Content="Capture" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Click="btnCaptureImage_Click"/>
+            <Button x:Name="btnStart" Content="Start" HorizontalAlignment="Left" Margin="0,0,0,0" VerticalAlignment="Top" Width="225" Style="{StaticResource BtnStyle}" Click="btnStart_Click"/>
+            <Button x:Name="btnCaptureImage" Content="Capture" HorizontalAlignment="Left" Margin="225,-25,0,0" VerticalAlignment="Top"  Width="225" Style="{StaticResource BtnStyle}" Click="btnCaptureImage_Click"/>
+            <Button x:Name="btnBack" Content="Back" HorizontalAlignment="Left" Margin="110,8,0,0" VerticalAlignment="Top" Width="225" Style="{StaticResource BtnStyle}" Click="btnBack_Click" />
         </StackPanel>
     </Grid>
+    
 </Window>
