--- a/2Y_2324_FinalsProject/MainWindow.xaml
+++ b/2Y_2324_FinalsProject/MainWindow.xaml
@@ -67,7 +67,29 @@
                 </Setter.Value>
             </Setter>
         </Style>
+        
+        <Style x:Key="btnStyle2" TargetType="Button">
+            <Setter Property="Width" Value="200"/>
+            <Setter Property="Height" Value="200"/>
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="BorderThickness" Value="0"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+            <Setter Property="HorizontalContentAlignment" Value="Center"/>
 
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="{x:Type Button}">
+                        <Grid>
+                            <Ellipse Fill="{TemplateBinding Background}"
+                             Stroke="{TemplateBinding BorderBrush}"
+                             StrokeThickness="{TemplateBinding BorderThickness}"/>
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                        </Grid>
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
         <Style x:Key="pbStyle" TargetType="PasswordBox">
             <Setter Property="Width" Value="200"/>
             <Setter Property="Height" Value="30"/>
@@ -136,14 +158,27 @@
             </Button>
             <Button x:Name="btnLogin" Content="LogIn" Margin="0 20 0 0" BorderThickness="2" BorderBrush="Black" Style="{StaticResource BtnStyle}" Click="btnLogin_Click"/>
         </StackPanel>
+        
+        <StackPanel x:Name="pnlMain" Margin="20 20 20 20" Orientation="Vertical" Visibility="Collapsed">
+            <Border Margin="0 0 0 0" BorderBrush="Black" BorderThickness="2" CornerRadius="2" >
+                <StackPanel  Orientation="Horizontal">
+                    <TextBlock Margin="310 0 0 0" Width="110" Height="30" Text="Header" TextAlignment="Center" FontSize="20"/>
+                    <TextBlock Margin="-750 0 0 0" Width="110" Height="25" Text="Logged In:" TextAlignment="Center" FontSize="15"/>
+                    <TextBlock Margin="-600 0 0 0" Width="110" Height="25" Text="Name" TextAlignment="Center" FontSize="15"/>
+                    <Button x:Name="btnLogout" Visibility="Visible" Margin="250 0 0 0" FontSize="12" Width="70" Height="25" Background="OrangeRed" Content="Logout" Style="{StaticResource BtnStyle}" Click="btnLogout_Click"/>
+                </StackPanel>
+            </Border>
 
-        <StackPanel x:Name="pnlMainMenu" Margin="20 20 20 20" Orientation="Vertical" Visibility="Collapsed">
+            <Button x:Name="btnPatient" Content="Patients" Style="{StaticResource btnStyle2}" Margin="-300 40 0 0" Click="btnPatient_Click"/>
+            <Button x:Name="btnStaff" Content="Staffs" Style="{StaticResource btnStyle2}" Margin="300 -200 0 0" Click="btnStaff_Click"/>
+        </StackPanel>
+
+        <StackPanel x:Name="pnlPatient" Margin="20 20 20 20" Orientation="Vertical" Visibility="Collapsed">
             <Border Margin="0 0 0 0" BorderBrush="Black" BorderThickness="2" CornerRadius="2" >
                 <StackPanel  Orientation="Horizontal">
                     <TextBlock Margin="310 0 0 0" Width="110" Height="30" Text="Patient List" TextAlignment="Center" FontSize="20"/>
                     <TextBlock Margin="-750 0 0 0" Width="110" Height="25" Text="Logged In:" TextAlignment="Center" FontSize="15"/>
                     <TextBlock Margin="-600 0 0 0" Width="110" Height="25" Text="Name" TextAlignment="Center" FontSize="15"/>
-                    <Button x:Name="btnLogout" Visibility="Visible" Margin="250 0 0 0" FontSize="12" Width="70" Height="25" Background="OrangeRed" Content="Logout" Style="{StaticResource BtnStyle}" Click="btnLogout_Click"/>
                     <Button x:Name="btnAdd" Visibility="Visible" Margin="-240 0 0 0" FontSize="12" Width="70" Height="25" Background="Orange" Content="Add Patient" Style="{StaticResource BtnStyle}" Click="btnAdd_Click"/>
                 </StackPanel>
             </Border>
@@ -152,30 +187,31 @@
                 <TextBlock Margin="130 10 0 0" Width="110" Height="30" Text="Search:" TextAlignment="Center" FontSize="20"/>
                 <TextBox x:Name="txtSearch" Width="300" HorizontalContentAlignment="Left" VerticalContentAlignment="Center" FontSize="13" Margin="0 10 0 0" Style="{StaticResource TxtBoxStyle}"/>
             </StackPanel>
-            <ListView x:Name="lvPatients" Margin="0,10,0,0" Width="501" Height="310" BorderThickness="0" >
+            <ListView x:Name="lvPatients" Margin="0,10,0,0" Width="501" Height="310" BorderThickness="0" MouseDoubleClick="lvPatients_MouseDoubleClick" >
                 <ListView.View>
                     <GridView>
                         <GridViewColumn Header="ID" Width="100" DisplayMemberBinding="{Binding Column1}" />
                         <GridViewColumn Header="Name" Width="200" DisplayMemberBinding="{Binding Column2}" />
                         <GridViewColumn Header="Status" Width="100" DisplayMemberBinding="{Binding Column3}" />
-                        <GridViewColumn Header="Doctor" Width="100" DisplayMemberBinding="{Binding Column4}" />
+                        <GridViewColumn Header="Physician" Width="100" DisplayMemberBinding="{Binding Column4}" />
                     </GridView>
                 </ListView.View>
             </ListView>
         </StackPanel>
 
         <StackPanel x:Name="pnlHeader" Visibility="Collapsed">
-            <TextBlock Text="Header Text" Margin="0 10 0 0" HorizontalAlignment="Center" FontSize="20" Background="Transparent"/>
+            <TextBlock x:Name="Header" Text="Header Text" Margin="0 10 0 0" HorizontalAlignment="Center" FontSize="20" Background="Transparent"/>
         </StackPanel>
 
-        <StackPanel x:Name="pnlPatientInfo" Margin="0 40 0 0" Orientation="Horizontal" Visibility="Visible" >
+        <StackPanel x:Name="pnlPatientInfo" Margin="0 40 0 0" Orientation="Horizontal" Visibility="Collapsed" >
             <Border Margin="50 20 0 20" BorderBrush="Black" BorderThickness="2" CornerRadius="2" >
                 <StackPanel Margin= "0 0 0 0" Orientation="Vertical" Background="White" >
                     <Image x:Name="imgPatient" Source="/Images/BlankImage.png" Margin="0 0 0 0" Width="200" Height="200"/>
                     <Button Visibility="Visible" x:Name="btnEdit" Margin="0 0 0 0" Content="Edit Profile" FontFamily="verdana" Background="#FFFFAE80" FontSize="13" BorderBrush="Transparent" Width="100" Height="20" Style="{StaticResource BtnStyle}" Click="btnEdit_Click" />
                     <Button Visibility="Collapsed" x:Name="btnTakeImg" Margin="-100 0 0 0" Content="Take Image" FontFamily="verdana" Background="#FFFFAE80" FontSize="13" BorderBrush="Transparent" Width="100" Height="20" Style="{StaticResource BtnStyle}" Click="btnTakeImg_Click" />
-                    <Button Visibility="Collapsed" x:Name="btnUploadPic" Margin="100 -20 0 0" Content="Upload Image" FontFamily="verdana" Background="#FFFFAE80" FontSize="13" BorderBrush="Transparent" Width="100" Height="20" Style="{StaticResource BtnStyle}" Click="btnUploadPic_Click" />
+                    <Button Visibility="Collapsed" x:Name="btnUploadPic" Margin="100 -20 0 0" Content="Upload Image" FontFamily="verdana" Background="#FFFFAE80" FontSize="13" BorderBrush="Transparent" Width="100" Height="20" Style="{StaticResource BtnStyle}" Click="btnUploadPic_Click"/>
                     <Button Visibility="Collapsed" x:Name="btnCancelEdit" Margin="0 10 0 0" Content="Cancel Edit" FontFamily="verdana" Background="#FF474D" FontSize="13" BorderBrush="Transparent" Width="100" Height="20" Style="{StaticResource BtnStyle}" Click="btnCancelEdit_Click" />
+                    <Button Visibility="Visible" x:Name="btnCheckUp" Margin="0 80 0 0" Content="CheckUp" FontFamily="verdana" Background="#FFFFAE80" FontSize="13" BorderBrush="Transparent" Width="199" Height="20" Style="{StaticResource BtnStyle}" Click="btnCheckUp_Click" />
                 </StackPanel>
             </Border>
 
@@ -192,8 +228,12 @@
                     <TextBox x:Name="txtAge" Text="test" Margin="-90 -20 0 0" Style="{StaticResource TxtBoxStyle2}" Width="40" HorizontalContentAlignment="Left"/>
                     <TextBlock Text="Date of Birth : " Margin="60 -20 0 0" Style="{StaticResource TxtBlockStyle}" Width="91"/>
                     <TextBox x:Name="txtDob" Text="test" Margin="290 -20 0 0" Style="{StaticResource TxtBoxStyle2}" Width="138" HorizontalContentAlignment="Left"/>
-                    <TextBlock Text="BloodType : " Margin="-350 20 0 0" Style="{StaticResource TxtBlockStyle}" Width="82"/>
-                    <ComboBox x:Name="cbBloodType" Margin="-175 -20 0 0" Background="White" Width="95" Height="20" Style="{StaticResource cmbStyle}">
+                    <TextBlock Text="Height(cm) : " Margin="-350 20 0 0" Style="{StaticResource TxtBlockStyle}" Width="91"/>
+                    <TextBox x:Name="txtHeight" Text="test" Margin="-200 -20 0 0" Style="{StaticResource TxtBoxStyle2}" Width="50" HorizontalContentAlignment="Left"/>
+                    <TextBlock Text="Weight(kg) : " Margin="-100 -20 0 0" Style="{StaticResource TxtBlockStyle}" Width="91"/>
+                    <TextBox x:Name="txtWeight" Text="test" Margin="40 -20 0 0" Style="{StaticResource TxtBoxStyle2}" Width="50" HorizontalContentAlignment="Left"/>
+                    <TextBlock Text="BloodType : " Margin="150 -20 0 0" Style="{StaticResource TxtBlockStyle}" Width="82"/>
+                    <ComboBox x:Name="cbBloodType" Margin="270 -20 0 0" Background="White" Width="50" Height="20" Style="{StaticResource cmbStyle}">
                         <ComboBoxItem Content="A-"/>
                         <ComboBoxItem Content="A+"/>
                         <ComboBoxItem Content="B-"/>
@@ -203,8 +243,8 @@
                         <ComboBoxItem Content="O-"/>
                         <ComboBoxItem Content="O+"/>
                     </ComboBox>
-                    <TextBlock Text="Patient Status : " Margin="75 -20 0 0" Style="{StaticResource TxtBlockStyle}" Width="106"/>
-                    <ComboBox x:Name="cbPStatus" Margin="270 -20 0 0" Background="White" Width="95" Height="20" Style="{StaticResource cmbStyle}" >
+                    <TextBlock Text="Patient Status : " Margin="-330 20 0 0" Style="{StaticResource TxtBlockStyle}" Width="106"/>
+                    <ComboBox x:Name="cbPStatus" Margin="-130 -20 0 0" Background="White" Width="95" Height="20" Style="{StaticResource cmbStyle}" >
                         <ComboBoxItem Content="Admitted"/>
                         <ComboBoxItem Content="Discharged"/>
                         <ComboBoxItem Content="Critical"/>
@@ -240,18 +280,35 @@
 
             <Border Margin="80 20 0 20" BorderBrush="Black" BorderThickness="2" CornerRadius="2">
                 <StackPanel Margin= "0 0 0 0"  Orientation="Vertical" Background="White">
-                    <TextBlock Text="Checkups" Margin="0 10 0 0" HorizontalAlignment="Center" Background="Transparent" Style="{StaticResource TxtBlockStyle}"/>
-                    <ListView x:Name="lvCheckups" Margin="0,10,0,0" Width="401" Height="310" BorderThickness="0" >
+                    <TextBlock Text="Vitals Checkup" Margin="0 10 0 0" HorizontalAlignment="Center" Background="Transparent" Style="{StaticResource TxtBlockStyle}"/>
+                    <ListView x:Name="lvVitals" Margin="0,10,0,0" Width="401" Height="310" BorderThickness="0" >
                         <ListView.View>
                             <GridView>
                                 <GridViewColumn Header="ID" Width="100" DisplayMemberBinding="{Binding Column1}" />
-                                <GridViewColumn Header="Date" Width="100" DisplayMemberBinding="{Binding Column2}" />
-                                <GridViewColumn Header="Doctor/Nurse" Width="200" DisplayMemberBinding="{Binding Column3}" />
+                                <GridViewColumn Header="Date" Width="150" DisplayMemberBinding="{Binding Column2}" />
+                                <GridViewColumn Header="Doctor/Nurse" Width="150" DisplayMemberBinding="{Binding Column3}" />
                             </GridView>
                         </ListView.View>
                     </ListView>
                 </StackPanel>
             </Border>
+        </StackPanel>
+
+        <StackPanel x:Name="pnlVitalsInfo" Visibility="Visible">
+            <TextBlock Text="Name : " Margin="-165 10 0 0" Style="{StaticResource TxtBlockStyle}" Width="66"/>
+            <TextBox x:Name="txtName3" Text="test" Margin="50 -20 0 0" Style="{StaticResource TxtBoxStyle2}" Width="160" HorizontalContentAlignment="Left"/>
+            <TextBlock Text="MDate : " Margin="-121 15 0 0" Style="{StaticResource TxtBlockStyle}" Width="120" />
+            <TextBox x:Name="txtVDate" Text="test" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}" Width="209" HorizontalContentAlignment="Left"/>
+            <TextBlock Text="PatientTemp : " Margin="-146 25 0 0" Style="{StaticResource TxtBlockStyle}" Width="71"/>
+            <TextBox x:Name="txtTemp" Text="test" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}" Width="209" HorizontalContentAlignment="Left"/>
+            <TextBlock Text="PatientPluseRte : " Margin="-144 25 0 0" Style="{StaticResource TxtBlockStyle}"/>
+            <TextBox x:Name="txtPulse" Text="test" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}" Width="209" HorizontalContentAlignment="Left"/>
+            <TextBlock Text="PatientRespi : " Margin="-117 25 0 0" Style="{StaticResource TxtBlockStyle}"/>
+            <TextBox x:Name="txtPatientRespie" Text="test" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}" Width="209" HorizontalContentAlignment="Left"/>
+            <TextBlock Text="patient sys : " Margin="-117 25 0 0" Style="{StaticResource TxtBlockStyle}"/>
+            <TextBox x:Name="txtbp1" Text="test" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}" Width="209" HorizontalContentAlignment="Left"/>
+            <TextBlock Text="patient diast : " Margin="-117 25 0 0" Style="{StaticResource TxtBlockStyle}"/>
+            <TextBox x:Name="txtbp2" Text="test" Margin="0 0 0 0" Style="{StaticResource TxtBoxStyle2}" Width="209" HorizontalContentAlignment="Left"/>
         </StackPanel>
         
     </Grid>
